--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,13 @@
 root = true
 
 [*]
+charset = utf-8
+end_of_line = lf
 indent_style = space
 indent_size = 2
-charset = utf-8
-trim_trailing_whitespace = true
+tab_width = 4
 insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.ps1]
 indent_size = 4
