--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,5 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build the Docker image
+      - name: Build Docker image
         run: docker build . --file Dockerfile --tag kitforbes/epubcheck:$(date +%s)
+      - name: Display Docker images
+        run: docker images
