--- a/.github/workflows/docker-image publish.yml
+++ b/.github/workflows/docker-image publish.yml
@@ -19,34 +19,31 @@ jobs:
         run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
         id: setup
 
-      - name: Build tagged Docker image
-        run: |
-          docker build . --file Dockerfile --tag "${IMAGE_NAME}:${IMAGE_TAG#*v}"
+      - name: Build Docker image
+        run: docker build . --file Dockerfile --tag "${IMAGE_NAME}:${IMAGE_TAG//v/}"
         env:
           IMAGE_TAG: ${{steps.setup.outputs.tag}}
 
       - name: Tag latest Docker image
-        run: |
-          docker tag "${IMAGE_NAME}:${IMAGE_TAG#*v}" "${IMAGE_NAME}:latest"
+        run: docker tag "${IMAGE_NAME}:${IMAGE_TAG//v/}" "${IMAGE_NAME}:latest"
         env:
           IMAGE_TAG: ${{steps.setup.outputs.tag}}
 
       - name: Display Docker images
         run: docker images
 
-      - name: Login to DockerHub
+      - name: Login to Docker Hub
         run: >
           echo ${{ secrets.DOCKERHUB_PASSWORD }} |
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
       - name: Push tagged Docker image
-        run: |
-          docker push "${IMAGE_NAME}:${IMAGE_TAG#*v}"
+        run: docker push "${IMAGE_NAME}:${IMAGE_TAG//v/}"
         env:
           IMAGE_TAG: ${{steps.setup.outputs.tag}}
 
       - name: Push latest Docker image
         run: docker push "${IMAGE_NAME}:latest"
 
-      - name: Logout of DockerHub
+      - name: Logout of Docker Hub
         run: docker logout
