--- a/.github/workflows/docker-image publish.yml
+++ b/.github/workflows/docker-image publish.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Login to Docker Hub
         run: >
-          echo ${{ secrets.DOCKERHUB_PASSWORD }} |
-          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" |
+          docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Push tagged Docker image
         run: docker push "${IMAGE_NAME}:${IMAGE_TAG//v/}"
