--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -22,4 +22,4 @@ jobs:
         run: docker build . --file Dockerfile --tag ${IMAGE_NAME}:$(date +%s)
 
       - name: Display Docker images
-        run: docker images
+        run: docker images "${IMAGE_NAME}"
