--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -10,7 +10,8 @@ on:
       - master
 
 env:
-  IMAGE_NAME: kitforbes/epubcheck
+  REGISTRY: kitforbes
+  IMAGE: epubcheck
 
 jobs:
   build:
@@ -19,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag ${IMAGE_NAME}:$(date +%s)
+        run: docker build . --file Dockerfile --tag "${REGISTRY}/${IMAGE}:$(date +%s)"
 
       - name: Display Docker images
-        run: docker images "${IMAGE_NAME}"
+        run: docker images "${REGISTRY}/${IMAGE}"
