Allow Checkout action to follow the main branch

--- a/.github/workflows/docker-image publish.yml
+++ b/.github/workflows/docker-image publish.yml
@@ -14,7 +14,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@main
 
     - name: Prepare variables
       run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
