--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@main
 
     - name: Build Docker image
       run: docker build . --file Dockerfile --tag "${REGISTRY}/${IMAGE}:ci"
